crates/rome_js_formatter/tests/specs/prettier/js/async-do-expressions/async-do-expressions.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: async-do-expressions.js

---
# Input
```js
async do {
  1;
};

(async do {});

let x = async do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

async do {
  await 42
}

function iter() {
  return async do {
    return 1;
  }
};

let x = async do {
  let tmp = f();
  tmp * tmp + 1
};

```

# Output
```js
async;
do {
  1;
};

(async
do {});

let x = async;
do {
  if (foo()) { f() }
  else if (bar()) { g() }
  else { h() }
};

async;
do {
  await 42
}

function iter() {
  return async do {
    return 1;
  }
};

let x = async;
do {
  let tmp = f();
  tmp * tmp + 1
};

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ async-do-expressions.js:1:7
  │
1 │ async do {
  │ ------^^
  │ │     │
  │ │     An explicit or implicit semicolon is expected here...
  │ ...Which is required to end this statement

error[SyntaxError]: expected `while` but instead found `;`
  ┌─ async-do-expressions.js:3:2
  │
3 │ };
  │  ^ unexpected

error[SyntaxError]: expected `')'` but instead found `do`
  ┌─ async-do-expressions.js:5:8
  │
5 │ (async do {});
  │        ^^ unexpected

error[SyntaxError]: expected `while` but instead found `)`
  ┌─ async-do-expressions.js:5:13
  │
5 │ (async do {});
  │             ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ async-do-expressions.js:7:15
  │
7 │ let x = async do {
  │ --------------^^ An explicit or implicit semicolon is expected here...
  │ │              
  │ ...Which is required to end this statement

error[SyntaxError]: expected `while` but instead found `;`
   ┌─ async-do-expressions.js:11:2
   │
11 │ };
   │  ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ async-do-expressions.js:13:7
   │
13 │ async do {
   │ ------^^
   │ │     │
   │ │     An explicit or implicit semicolon is expected here...
   │ ...Which is required to end this statement

error[SyntaxError]: expected `while` but instead found `function`
   ┌─ async-do-expressions.js:17:1
   │
17 │ function iter() {
   │ ^^^^^^^^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ async-do-expressions.js:18:16
   │
18 │   return async do {
   │   -------------^^
   │   │            │
   │   │            An explicit or implicit semicolon is expected here...
   │   ...Which is required to end this statement

error[SyntaxError]: expected `while` but instead found `}`
   ┌─ async-do-expressions.js:21:1
   │
21 │ };
   │ ^ unexpected

error[SyntaxError]: expected `')'` but instead found `;`
   ┌─ async-do-expressions.js:21:2
   │
21 │ };
   │  ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ async-do-expressions.js:23:15
   │
23 │ let x = async do {
   │ --------------^^ An explicit or implicit semicolon is expected here...
   │ │              
   │ ...Which is required to end this statement

error[SyntaxError]: expected `while` but instead found `;`
   ┌─ async-do-expressions.js:26:2
   │
26 │ };
   │  ^ unexpected


```


